--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Manimation | Texas A&M Math Learning Center</title>
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="public/css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/python/python.min.js"></script>
@@ -149,6 +149,6 @@
     </div>
   </footer>
   <!-- Load the main JS file as a module -->
-  <script type="module" src="js/main.js"></script>
+  <script type="module" src="public/js/main.js"></script>
 </body>
 </html>
