transfer to api calls from local storage

--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,10 @@
                 <label for="anim-description">Description:</label>
                 <textarea id="anim-description" name="anim-description" required></textarea>
               </div>
+              <div clas="form-group">
+                <label for="anim-file">Upload MP4 File:</label>
+                <input type="file" id="anim-file" name="videoFile" accept="video/mp4" required />
+              </div>
               <div class="form-group">
                 <label for="python-file">Python File (.py):</label>
                 <input type="file" id="python-file" name="python-file" accept=".py" />
