--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,24 @@
 
   <!-- Main Content -->
   <main>
+    <!-- Login Section -->
+    <section id="login-section" class="page-section hidden fade-in">
+      <div class="container">
+        <h2>Educator Login</h2>
+        <form id="login-form">
+          <div class="form-group">
+            <label for="login-username">Username:</label>
+            <input type="text" id="login-username" name="username" required />
+          </div>
+          <div class="form-group">
+            <label for="login-password">Password:</label>
+            <input type="password" id="login-password" name="password" required />
+          </div>
+          <button type="submit">Login</button>
+          <button type="button" id="login-cancel">Cancel</button>
+        </form>
+      </div>
+    </section>
     <!-- Landing Page / Hero -->
     <section id="landing-page" class="page-section hero-section fade-in">
       <div class="hero-content">
@@ -84,6 +102,9 @@
           <button id="manage-tab-btn" class="tab active" role="tab" aria-selected="true">Manage Animations</button>
           <button id="add-tab-btn" class="tab" role="tab" aria-selected="false">Add Animation</button>
         </div>
+        <!-- somewhere in #educator-interface container -->
+        <button id="logout-btn" class="back-btn">Logout</button>
+
         <div id="educator-content">
           <!-- Manage Section -->
           <section id="manage-section">
